# DaoUI

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  vcpkg.json
.github/workflows/: doxygen.yml
code/: CMakeLists.txt  main.cpp
code/include/: app.hpp  atlas_region.hpp  atlas_region_data.hpp  atlas_texture.hpp  atlas_vertex_batch_builder.hpp  better_stl.hpp  bounding_box.hpp  glyph_atlas.hpp  mapped_region.hpp  page.hpp  quad_index.hpp  text.hpp  texture_data.hpp  vertex_batch_builder.hpp  window.hpp
code/include/component/: geometry.hpp  material.hpp  polygon.hpp  rectangle.hpp  simple_button.hpp  simple_text_button_style.hpp  simple_texture_button_style.hpp
code/include/core/basic_drawing_elements/: atlas_region.hpp  atlas_texture.hpp  color_rgb.hpp  glyph_atlas.hpp  text.hpp
code/include/core/frame/: app.hpp  vertex_batch_builder.hpp  window.hpp
code/include/core/tool/: better_stl.hpp  bounding_box.hpp  mapped_region.hpp
code/include/interface/: button.hpp  button_style.hpp  drawable.hpp  page.hpp
code/src/: app.cpp  atlas_texture.cpp  atlas_vertex_batch_builder.cpp  bounding_box.cpp  mapped_region.cpp  vertex_batch_builder.cpp  window.cpp
code/src/eastl/: eastl_support.cpp
code/tests/: test_page.hpp
docs/: README.ch-ZN.md
docs/zh/: code_style.md
doxygen/: Doxyfile  my_style.css
doxygen/Doxyfiles/: Doxyfile.en  Doxyfile.zh
doxygen/style/: style.css  style.js
en/: annotated.html  annotated_dup.js  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  app_8cpp_source.html  app_8hpp.html  app_8hpp.js  app_8hpp__dep__incl.map  app_8hpp__dep__incl.md5  app_8hpp__incl.map  app_8hpp__incl.md5  app_8hpp_source.html  atlas__region__data_8hpp.html  atlas__region__data_8hpp.js  atlas__region__data_8hpp__dep__incl.map  atlas__region__data_8hpp__dep__incl.md5  atlas__region__data_8hpp__incl.map  atlas__region__data_8hpp__incl.md5  atlas__region__data_8hpp_source.html  atlas__texture_8cpp.html  atlas__texture_8cpp__incl.map  atlas__texture_8cpp__incl.md5  atlas__texture_8cpp_source.html  atlas__texture_8hpp.html  atlas__texture_8hpp.js  atlas__texture_8hpp__dep__incl.map  atlas__texture_8hpp__dep__incl.md5  atlas__texture_8hpp__incl.map  atlas__texture_8hpp__incl.md5  atlas__texture_8hpp_source.html  atlas__vertex__batch__builder_8hpp.html  atlas__vertex__batch__builder_8hpp.js  atlas__vertex__batch__builder_8hpp__dep__incl.map  atlas__vertex__batch__builder_8hpp__dep__incl.md5  atlas__vertex__batch__builder_8hpp__incl.map  atlas__vertex__batch__builder_8hpp__incl.md5  atlas__vertex__batch__builder_8hpp_source.html  bounding__box_8hpp.html  bounding__box_8hpp.js  (+219 more)
en/html/: annotated.html  annotated_dup.js  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  app_8cpp_source.html  app_8hpp.html  app_8hpp__dep__incl.md5  app_8hpp__incl.map  app_8hpp__incl.md5  app_8hpp_source.html  atlas__region_8hpp.html  atlas__region_8hpp__dep__incl.md5  atlas__region_8hpp__incl.md5  atlas__region_8hpp_source.html  atlas__texture_8cpp.html  atlas__texture_8cpp__incl.map  atlas__texture_8cpp__incl.md5  atlas__texture_8cpp_source.html  atlas__texture_8hpp.html  atlas__texture_8hpp__dep__incl.map  atlas__texture_8hpp__dep__incl.md5  (+386 more)
test/: CMakeLists.txt
test/include/: test_page.hpp  texture_id.hpp
test/src/: atlas_region.cpp  main.cpp  test_page.cpp
tool/: atlas_packer.py  json-to-inc.py  pyproject.toml
zh/: doxygen.css
(+630 files in other folders)
